--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.17.3",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "rxjs": "^7.4.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
