--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17.0.9",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.3",
     "react-icons": "^4.2.0",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.1.7",
     "@types/styled-components": "^5.1.15"
   }
 }
